# Djaja

./: .env.local.example  .gitignore  ARCHITECTURE.md  CHECKLIST.md  EMBEDDED_SERVER_GUIDE.md  PROJECT_SUMMARY.md  README.md  SETUP_GUIDE.md  TAURI_SETUP_GUIDE.md  api-tests.http  brand-colors.html  next.config.js  package-lock.json  package.json  tailwind.config.ts  tsconfig.json
app/: globals.css  layout.tsx  page.tsx
app/auth/login/: page.tsx
app/auth/register/: page.tsx
app/dashboard/: page.tsx
app/device-simulator/: page.tsx  types.ts  utils.ts
app/patients/: page.tsx
app/teleconsultation/: page.tsx  types.ts
backup/backup-20251123-174114/djaja/: auditlogs.bson  auditlogs.metadata.json  facilities.bson  facilities.metadata.json  observations.bson  observations.metadata.json  patients.bson  patients.metadata.json  users.bson  users.metadata.json
components/: Footer.tsx  Navbar.tsx  PatientSelector.tsx  SerialPortConfig.tsx  ServerStatus.tsx
components/device-simulator/: IndicatorControlPanel.tsx  StatusBadge.tsx  StreamingIndicator.tsx  VitalCard.tsx  index.ts
docs/: IOT-DEVICE-SIMULATION.md
lib/: pdf-utils.ts  tauri-serial.ts
server/: .env.example  FHIR_IMPLEMENTATION_SUMMARY.md  MIGRATION_GUIDE.md  QUICK_START_MIGRATION.md  package-lock.json  package.json
server/src/: server.js  server.ts
server/src/config/: db.ts
server/src/middleware/: auth.js  auth.ts
server/src/models/: AllergyIntolerance.ts  AuditLog.js  AuditLog.ts  Condition.ts  Encounter.ts  (+11 more)
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: lib.rs  serial.rs  server.rs
(+14 files in other folders)
