[package]
name = "djaja-diagnostics"
version = "0.1.0"
description = "Djaja - Diagnostics as a Service Desktop Application"
authors = ["Djaja Team"]
license = ""
repository = ""
edition = "2021"
rust-version = "1.77.2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.5.1", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
log = "0.4"
tauri = { version = "2.9.2", features = [] }
tauri-plugin-log = "2"
serialport = "4.3"
tokio = { version = "1.35", features = ["full"] }
anyhow = "1.0"
